[project]
name = "incident-graph"
version = "0.1.0"
description = "A GraphRAG based incident root cause analyzer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-neo4j>=0.9.0",
    "neo4j>=6.1.0",
    "python-dotenv>=1.2.2",
]
